--- a/thesis.tex
+++ b/thesis.tex
@@ -54,9 +54,10 @@
 
     В разделе <<Алгоритмы, структуры данных и математические методы>> предлагается решение поставленных задач, приводится описание использованных и разработанных алгоритмов.
 
-    В разделе <<Вычислительный эксперимент>> описывается применение результатов исследования в реальном проекте игровом проекте компании <<Game Forest>>, разработанном на игровом движке с открытым исходным кодом <<Citrus>>.
+    В разделе <<Применение алгоритмов>> описывается применение результатов исследования в реальном игровом проекте компании <<Game Forest>>, разработанном на игровом движке с открытым исходным кодом <<Citrus>>.
 
     \section*{Глоссарий}
+    \pagebreak
     \section{Задачи упрощения полигонов и упаковки в контейнеры}
 
     Целью работы является решение задач упрощения полигонов и упаковки, которые играют важную роль в таких прикладных областях, как компьютерная графика, GIS системы, промышленность и т.д. Решение этой задачи также опирается на прикладную область: компьютерную графику, а именно автоматическую генерацию текстурного меша с последующей упаковкой полигональных текстур в текстурные атласы.
@@ -136,7 +137,7 @@
 
     \subsection{Упаковка текстур в атласы}
 
-    Как было сказано в \ref{TextureMeshGeneration}, прежде чем отрисовать объект на экране, его текстуру и меш необходимо отправить на видеокарту. В компьютерной графике применяют различные подходы, которые позволяют уменьшить количество отправлений данных на GPU. Одним из таких подходов является использование текстурных атласов. Текстурный атлас -- это большое изображение, содержащее набор под-изображений. Под-текстуры отображаются на объект, используя UV-преобразование, при этом координаты в атласе задают, какую часть изображения нужно использовать. Если текстуры подряд идущих игровых объектов находятся в одном атласе, то при равенстве прочих параметрах отрисовки (например, шейдеры или режим смешивания) эти объекты можно отрисовать разом за один Draw Call.
+    Как было сказано в \ref{TextureMeshGeneration}, прежде чем отрисовать объект на экране, его текстуру и меш необходимо отправить на видеокарту. В компьютерной графике применяют различные подходы, которые позволяют уменьшить количество отправлений данных на GPU. Одним из таких подходов является использование текстурных атласов. Текстурный атлас -- это большое изображение, содержащее набор под-изображений. Под-текстуры отображаются на объект, используя UV-преобразование, при этом координаты в атласе задают, какую часть изображения нужно использовать. Если текстуры подряд идущих игровых объектов находятся в одном атласе, то при равенстве прочих параметров отрисовки (например, шейдеры или режим смешивания) эти объекты можно отрисовать разом за один Draw Call.
 
     \begin{figure}[H]
         \centering
@@ -144,7 +145,7 @@
         \caption{Текстурный атлас}
     \end{figure}
 
-    Для того чтобы уменьшить размер текстур и соответственно ускорить их загрузку на GPU, в компьютерной графике применяют компрессию. Алгоритмы сжатия часто ставят ограничение на размеры текстур. Например, размеры должны быть степенью двойки или даже длина должна совпадать с шириной. В этом случае текстуры, не подходящие под ограничения, необходимо изменить, что плохо сказывается на качестве текстуры или на её размере, поэтому использовании компрессии целесообразно паковать текстуры в атлас.
+    Для того чтобы уменьшить размер текстур и ,соответственно, ускорить их загрузку на GPU, в компьютерной графике применяют компрессию. Алгоритмы сжатия часто ставят ограничение на размеры текстур. Например, размеры должны быть степенью двойки или даже длина должна совпадать с шириной. В этом случае текстуры, не подходящие под ограничения, необходимо изменить, что плохо сказывается на качестве текстуры или на её размере, поэтому при использовании компрессии целесообразно паковать текстуры в атлас.
 
     Упаковка текстур в атласы это частный случай задачи упаковки в контейнеры -- NP-трудной \cite{BinPackingIsNPHard} комбинаторной задачи. Задача заключается в упаковке объектов предопределённой формы в конечное число контейнеров предопределённой формы таким способом, чтобы число использованных контейнеров было наименьшим или количество или объём объектов (которые упаковывают) были наибольшими. В данной работе предлагается решение 2D irregular bin packing problem \cite{TypologyOfPackingProblems}, то есть упаковки полигональных объектов в прямоугольные контейнеры.
 
@@ -158,8 +159,8 @@
 
     Генетический алгоритм \cite{JAKOBS1996165} -- это эвристический алгоритм поиска, используемый для решения задач оптимизации и моделирования путём случайного подбора, комбинирования и вариации искомых параметров с использованием механизмов, аналогичных естественному отбору в природе.
 
-   Существующие алгоритмы не удовлетворяют нужды упаковки текстур в атласы, поэтому данная работа предлагает оригинальную реализацию Memetic algorithm \cite{WhatIsMemetic} -- расширение генетического алгоритма, которое использует локальный поиск для уменьшения вероятности преждевременной сходимости. Разработанный алгоритм способен упаковывать изображения со свободным поворотом, на которых находятся множество разрозненных объектов с дырами.
-
+    Существующие алгоритмы не удовлетворяют нужды упаковки текстур в атласы, поэтому данная работа предлагает оригинальную реализацию Memetic algorithm \cite{WhatIsMemetic} -- расширение генетического алгоритма, которое использует локальный поиск для уменьшения вероятности преждевременной сходимости. Разработанный алгоритм способен упаковывать изображения со свободным поворотом, на которых находятся множество разрозненных объектов с дырами.
+    \pagebreak
     \section{Алгоритмы, структуры данных и математические методы}
 
     \subsection{Трассировка контура}
@@ -186,15 +187,15 @@
 
     \subsubsection{Обход попиксельно}
 
-    Методы выделения контура начинаются с пикселя и обходят контуры изображения образом специфичным для метода, а затем сохраняет их координаты в памяти в соответствии с порядком обхода. Наиболее известные алгоритмы обхода контура попиксельно: Moore-neighbor tracing \cite{MoorNeighbor}, radial sweep \cite{RadialSweep} и алгоритм Theo Pavlidis \cite{TheoPavlidis}.
+    Методы выделения контура начинаются с пикселя и обходят контуры изображения образом, специфичным для метода, а затем сохраняет их координаты в памяти в соответствии с порядком обхода. Наиболее известные алгоритмы обхода контура попиксельно: Moore-neighbor tracing \cite{MoorNeighbor}, radial sweep \cite{RadialSweep} и алгоритм Theo Pavlidis \cite{TheoPavlidis}.
 
     \subsubsection{Обход повершинно}
 
-    Метод выделения контура обходом повершинно отличается от обхода попиксельно лишь тем, что обход осуществляется по границам пикселя.
+    Метод выделения контура обходом повершинно отличается от обхода попиксельно лишь тем, что обход осуществляется по границам пикселей.
 
     \subsubsection{Run-data}
 
-    Run-data методы выделения контура проходят по изображению сканирующей линией оставляя зависящие от конкретного алгоритма метки на встреченном граничном пикселе. Далее по расставленным меткам восстанавливается контур изображения. Примеры методов этой группы: run-type direction code \cite{Miyatake1997}, методы, основанные на PXY таблице \cite{Shoji}. Отличительной особенностью run-data методов является возможность выделения внешних и внутренних контуров, сохраняя иерархию. Так же способ обхода изображения в некоторых алгоритмах позволяет не держать в памяти изображение целиком.
+    Run-data методы выделения контура проходят по изображению сканирующей линией, оставляя зависящие от конкретного алгоритма метки на встреченном граничном пикселе. Далее, по расставленным меткам восстанавливается контур изображения. Примеры методов этой группы: run-type direction code \cite{Miyatake1997}, методы, основанные на PXY таблице \cite{Shoji}. Отличительной особенностью run-data методов является возможность выделения внешних и внутренних контуров, сохраняя иерархию. Так же способ обхода изображения в некоторых алгоритмах позволяет не держать в памяти изображение целиком.
 
     Было решено выбрать алгоритм именно из этой группы методов, так как необходимо выделять дырки на объектах. За основу был взят алгоритм Suzuki Satoshi \cite{SuzukiAlgorithm}, использующийся в библиотеке OpenCV. Алгоритм способен построить иерархию контуров и типизировать их на границы и дыры.
 
@@ -325,7 +326,7 @@
 
     \paragraph{Удаление вогнутого/выпуклого угла}
 
-    Если вершина $v_i$ принадлежит границе или дыре и образует вогнутый или выпуклый угол соответственно, то возможно провести отрезок $\gsegment{v_{i - 1}v_{i + 1}}$ и удалить вершину $v_i$. Также из теоремы о двух ушах \cite{TwoEars} следует, что любой последовательностью  таких преобразований можно сократить дыру до треугольника. Теорема о двух ушах гласит, что в каждом просто полигоне с более чем 3 вершинами есть хотя бы 2 уха. Ухом называется вершина, соседние вершины которой можно соединить отрезком, который будет полностью лежать внутри полигона.
+    Если вершина $v_i$ принадлежит границе или дыре и образует вогнутый или выпуклый угол соответственно, то возможно провести отрезок $\gsegment{v_{i - 1}v_{i + 1}}$ и удалить вершину $v_i$. Также из теоремы о двух ушах \cite{TwoEars} следует, что любой последовательностью  таких преобразований можно сократить дыру до треугольника. Теорема о двух ушах гласит, что в каждом простом полигоне с более чем 3 вершинами есть хотя бы 2 уха. Ухом называется вершина, соседние вершины которой можно соединить отрезком, который будет полностью лежать внутри полигона.
 
     \begin{figure}[H]
         \centering
@@ -417,7 +418,7 @@
         \label{VP}
     \end{figure}
 
-    Пусть у нас есть вершины 2 последовательные вершины $prev$ и $current$ некоторого полигона $P$. Также для них известны полигоны видимости $V_{prev}$ и $V_{current}$. Тогда для каждой точки $q \in V_{current}$, являющийся вершиной полигона, но $q \notin P$, необходимо проверить, $next\left(q\right) \in V_{prev}$. Если $next\left(q\right) \in V_{prev}$ значит 2 полигона можно слить через вершины $prev, next\left(q\right), q, current$ (проверив при этом отсутствие самопересечений). Запрос о нахождении точки в полигоне видимости можно выполнить за $O\left(\log \left|V\right|\right)$ при помощи бинарного поиска, так как вершины полигона видимости отсортированы по полярному углу относительно точки запроса.
+    Пусть у нас есть вершины 2 последовательные вершины $prev$ и $current$ некоторого полигона $P$. Также для них известны полигоны видимости $V_{prev}$ и $V_{current}$. Тогда для каждой точки $q \in V_{current}$, являющийся вершиной полигона, но $q \notin P$, необходимо проверить, $next\left(q\right) \in V_{prev}$. Если $next\left(q\right) \in V_{prev}$, значит 2 полигона можно слить через вершины $prev, next\left(q\right), q, current$, проверив при этом отсутствие самопересечения. Запрос о нахождении точки в полигоне видимости можно выполнить за $O\left(\log \left|V\right|\right)$ при помощи бинарного поиска, так как вершины полигона видимости отсортированы по полярному углу относительно точки запроса.
 
     \begin{algo}[H]
         \setstretch{1}
@@ -446,7 +447,7 @@
         \end{algorithmic}
     \end{algo}
 
-    В данной работе был реализован алгоритм Triangular Expansion \cite{TriangularExpansion} для нахождения полигона видимости в триангуляции. Данный алгоритм для точки запроса $q$ в полигоне $P$ сначала находит треугольник, содержащий точку. Очевидно, что $q$ видит весь треугольник и к полигону видимости можно добавить все ребра, которые принадлежат $\partial P$. Для всех других ребер вызывается рекурсивная процедура, которая расширяет поле зрения $q$ через ребро. Изначально поле зрения q ограничивается концами ребра, однако, по мере углубления в рекурсию, поле зрение может быть дополнительно ограничено. Алгоритм затрачивает $O\left(nh\right)$ времени и $O\left(n\right)$ памяти, где $h$ это количество дыр. Но на практике алгоритм часто затрачивает сублинейное время, так как затрагивает только треугольники, которые на самом деле видны.
+    В данной работе был реализован алгоритм Triangular Expansion \cite{TriangularExpansion} для нахождения полигона видимости в триангуляции. Данный алгоритм для точки запроса $q$ в полигоне $P$ сначала находит треугольник, содержащий точку. Очевидно, что $q$ видит весь треугольник и к полигону видимости можно добавить все ребра, которые принадлежат $\partial P$. Для всех других ребер вызывается рекурсивная процедура, которая расширяет поле зрения $q$ через ребро. Изначально поле зрения $q$ ограничивается концами ребра, однако по мере углубления в рекурсию, поле зрения может быть дополнительно ограничено. Алгоритм затрачивает $O\left(nh\right)$ времени и $O\left(n\right)$ памяти, где $h$ это количество дыр. Но на практике алгоритм часто затрачивает сублинейное время, так как затрагивает только треугольники, которые на самом деле видны.
 
     \subsubsection{Применение преобразований}
 
@@ -459,15 +460,15 @@
         \label{TriangleExistenceCheck}
     \end{figure}
 
-    Вершины дополнительно хранятся в двоичном дереве поиска, отсортированной по стоимости их преобразования. На каждой итерации цикла применяется аппроксимирующее преобразование с минимальной стоимостью. После применения преобразования пересчитываются преобразования соседних вершин. Аппроксимация соседних контуров или объемлющей дыры могут повлияет на валидность посчитанного преобразования. При неудачной попытке произвести преобразование, преобразование для вершины пересчитывается, берется новая вершина из дерева и попытки повторяются. Такой ленивый пересчет позволяет избежать больших временных затрат, так как любая трансформация может в худшем случае повлиять на трансформацию $O\left(n\right)$ вершин. Однако на практике такое встречается редко.
+    Вершины дополнительно хранятся в двоичном дереве поиска, отсортированной по стоимости их преобразования. На каждой итерации цикла применяется аппроксимирующее преобразование с минимальной стоимостью. После применения преобразования пересчитываются преобразования соседних вершин. Аппроксимация соседних контуров или объемлющей дыры могут повлиять на валидность посчитанного преобразования. При неудачной попытке произвести преобразование, преобразование для вершины пересчитывается, берется новая вершина из дерева и попытки повторяются. Такой ленивый пересчет позволяет избежать больших временных затрат, так как любая трансформация может в худшем случае повлиять на трансформацию $O\left(n\right)$ вершин. Однако на практике такое встречается редко.
 
     \subsubsection{Вычислительная устойчивость}
 
-    Вычислительная устойчивость алгоритма достигается использованием вычислительно устойчивых геометрических предикатов, разработанных Jonathan Shewchuk \cite{shewchuk97a}. Данные предикаты также используются для построения Делоне с ограничениями.
+    Вычислительная устойчивость алгоритма достигается использованием вычислительно устойчивых геометрических предикатов, разработанных Jonathan\\Shewchuk \cite{shewchuk97a}. Данные предикаты также используются для построения Делоне с ограничениями.
 
     \subsubsection{Меш}
 
-    Для отрисовки объектов в игре понадобится получить текстурный меш из аппроксимированного контура. Так как для аппроксимации создается триангуляция Делоне, то необходимо просто выбрать из неё нужные треугольники. Для этого достаточно запустить обход в глубину триангуляции. Основой триангуляции является структура данных Halfedge \cite{Halfedge}, представляющая собой ориентированное ребро с указателем на следующее и соседнее (ориентированное в обратном направлении) ребро. Каждое ограниченное ребро триангуляции является ребром одного из полигонов. Значит, при переходе через такое ребро мы входим или выходим в/из площади объекта на картинке.
+    Для отрисовки объектов в игре понадобится получить текстурный меш из аппроксимированного контура. Так как для аппроксимации создается триангуляция Делоне, то необходимо просто выбрать из неё нужные треугольники. Для этого достаточно запустить обход в глубину триангуляции. Основой триангуляции является структура данных Halfedge \cite{Halfedge}, представляющая собой ориентированное ребро с указателем на следующее и соседнее, ориентированное в обратном направлении, ребро. Каждое ограниченное ребро триангуляции является ребром одного из полигонов. Значит, при переходе через такое ребро мы входим или выходим в/из площади объекта на картинке.
 
     \begin{algo}[H]
         \setstretch{1}
@@ -481,9 +482,11 @@
                     \State $faceList \gets faceList \bigcup FaceFrom\left(edge\right)$
                 \EndIf
                 \State $current \gets edge.Next$
+                \State $used \gets used \cup current$
+                \State $used \gets used \cup current.Next$
+                \State $used \gets used \cup current.Prev$
                 \While{$current \neq edge$} \Comment{Recursively call to other sides}
-                    \If{$current.Twin \neq null \; \textbf{and} \; used \cap current != \emptyset$ }
-                        \State $used \gets used \cup current$
+                    \If{$current.Twin \neq null \; \textbf{and} \; used \cap current.Twin != \emptyset$ }
                         \State $twin \gets current.Twin$
                         \State $fis \gets faceIndices$
                         \If{$twin.IsConstrained$} \Comment{We enter or leave polygon}
@@ -499,7 +502,7 @@
 
     \subsection{Генетический алгоритм}
 
-    Основная идея всех эволюционных алгоритмов одинакова: популяция особей в некоторой среде конкурирует за ограниченные ресурсы, конкуренция приводит к естественному отбору -- выживает наиболее приспособленный. Каждая особь представляет собой элемент в области определения функции приспособленности (fitness or evaluation function, функции оценки), которую необходимо минимизировать. Изначально создается популяции из случайных значений из области определения функции. Затем отбираются лучшие особи, которые подвергаются воздействую операторов вариации (рекомбинации и\textbackslash или мутации). Из полученной популяции только часть наиболее приспособленных особей доживает до нового поколение. И так повторяется до тех пор, пока не будет достигнуто желаемое решение. Генетический мета-алгоритм показан в \talgref{meta-genetics}.
+    Основная идея всех эволюционных алгоритмов одинакова: популяция особей в некоторой среде конкурирует за ограниченные ресурсы, конкуренция приводит к естественному отбору -- выживает наиболее приспособленный. Каждая особь представляет собой элемент в области определения функции приспособленности (fitness or evaluation function, функции оценки), которую необходимо минимизировать. Изначально создается популяции из случайных значений из области определения функции. Затем отбираются лучшие особи, которые подвергаются воздействию операторов вариации (рекомбинации и\textbackslash или мутации). Из полученной популяции только часть наиболее приспособленных особей доживает до нового поколения. И так повторяется до тех пор, пока не будет достигнуто желаемое решение. Генетический мета-алгоритм показан в \talgref{meta-genetics}.
 
     \begin{algo}[H]
         \setstretch{1}
@@ -532,19 +535,19 @@
 
     \paragraph{Популяция}
 
-    Популяции это набор особей. Практически во всех вариантах эволюционных алгоритмов размер популяции постоянен. Отбор берет во внимание всю популяцию целиком, а не отдельно каждого индивида.
+    Популяции -- это набор особей. Практически во всех вариантах эволюционных алгоритмов размер популяции постоянен. Отбор берет во внимание всю популяцию целиком, а не отдельно каждого индивида.
 
     \paragraph{Механизм отбора родителей}
 
-    Механизм отбора родителей используется, чтобы выбрать наиболее хороших особей для того, чтобы они стали родителями для следующего поколения. Отбор родителей необходим, чтобы повысить качество будущего поколения. Для создания потомства к родителям применяют операторы вариации. Выбор родителей всегда вероятностный. Более приспособленные особи имеет более высокий шанс стать родителями, но менее приспособленным особям дается малый шанс, иначе поиск решения будет слишком жадным.
+    Механизм отбора родителей используется, чтобы выбрать наиболее хороших особей для того, чтобы они стали родителями для следующего поколения. Отбор родителей необходим, чтобы повысить качество будущего поколения. Для создания потомства к родителям применяют операторы вариации. Выбор родителей всегда вероятностный. Более приспособленные особи имеют высокий шанс стать родителями. Менее приспособленным особям тоже дается шанс, но малый, иначе поиск решения будет слишком жадным.
 
     \paragraph{Операторы вариации. Мутация и рекомбинация}
 
-    Роль операторов вариации -- создание новых особей из старых. Обычно, разделяют операторы вариации разделяют на 2 группы по арности: унарная и n-арная версии. Все операторы вариации, обычно, стохастические. Исключением является применение операторов вариации, в которых заложено знание о проблеме. Таким образом, можно исключить образование заведомо неверных решений в популяции либо всегда создавать решения лучше их родительских.
+    Ролью операторов вариации является создание новых особей из старых. Операторы вариации разделяют на 2 группы по арности: унарная и n-арная версии. Все операторы вариации, обычно, стохастические. Исключением является применение операторов вариации, в которых заложено знание о проблеме. Таким образом, можно исключить образование заведомо неверных решений в популяции либо всегда создавать решения лучше их родительских.
 
-    Унарный оператор вариации, обычно, называют мутацией. Мутация применяется к одной особи, производя из неё новую слегка измененную особь. Роль мутации заключается в исследовании новых мест в области значений функции оценки. Мутация позволяет избежать преждевременной сходимости в локальном минимуме.
+    Унарный оператор вариации называют мутацией. Мутация применяется к одной особи, производя из неё новую слегка измененную особь. Роль мутации заключается в исследовании новых мест в области значений функции оценки. Мутация позволяет избежать преждевременной сходимости в локальном минимуме.
 
-    Бинарный оператор вариации, обычно, называют рекомбинацией или кроссовером. Как следует из названия, такой оператор совмещает информацию от двух родителей, сохраняя свойства от обоих. Роль кроссовера заключается в эксплуатации области значения функции оценки, занимаемой текущим поколением популяции.
+    Бинарный оператор вариации называют рекомбинацией или кроссовером. Как следует из названия, такой оператор совмещает информацию от двух родителей, сохраняя свойства от обоих. Роль кроссовера заключается в эксплуатации области значения функции оценки, занимаемой текущим поколением популяции.
 
     \paragraph{Механизм отбора выживших}
 
@@ -583,7 +586,7 @@
 
     \subsubsection{Механизм отбора родителей}
 
-    Как было сказано ранее, отбор родителей это стохастический процесс, в котором более приспособленные родители имеют более высокий шанс быть выбранными, поэтому первое, что приходит на ум, это присвоить шанс выбора пропорционально значению функции оценки, то есть $P\left(i\right) = \frac{f_i}{\sum_{j=0}^{n - 1} f_i}$. Однако такое наивное решение имеет ряд недостатков:
+    Как было сказано ранее, отбор родителей -- это стохастический процесс, в котором более приспособленные родители имеют более высокий шанс быть выбранными, поэтому первое, что приходит на ум, это присвоить шанс выбора пропорционально значению функции оценки, то есть $P\left(i\right) = \frac{f_i}{\sum_{j=0}^{n - 1} f_i}$. Однако такое наивное решение имеет ряд недостатков:
 
     \begin{itemize}
         \item Выдающиеся особи быстро захватывают популяцию, что вырождается в преждевременной сходимости, часто, не к лучшему результату;
@@ -591,11 +594,11 @@
         \item При применении аффинных преобразований к функции оценки, данный способ отбора начинает вести себя совершенно по-другому.
     \end{itemize}
 
-    Отбор по рангу\cite{RankingSelection} это другой метод, вдохновленный недостатками отбору по значению оценочной функции. Данный метод сортирует популяцию по значению оценочной функции и присваивает ранг каждой особи (лучшее решение имеет ранг $n - 1$, а худшее $0$). Вероятность отбора вычисляется на основе ранга, например, линейно или экспоненциально уменьшаясь от лучшего решения к худшему,
+    Отбор по рангу\cite{RankingSelection} это другой метод, вдохновленный недостатками отбора по значению оценочной функции. Данный метод сортирует популяцию по значению оценочной функции и присваивает ранг каждой особи (лучшее решение имеет ранг $n - 1$, а худшее $0$). Вероятность отбора вычисляется на основе ранга, например, линейно или экспоненциально уменьшаясь от лучшего решения к худшему,
 
     \begin{align*}
         P_{linear}\left(i\right) &= \frac{2 - s}{n} + \frac{2i\left(s - 1\right)}{n\left(n - 1\right)},\\
-        P_{exp}\left(i\right) &= \frac{1 - e^{-i}}{c}.
+        P_{exp}\left(i\right) &= \frac{1 - e^{-i}}{c},
     \end{align*}
 
     где $s$ это константа $1 < s\leq 2$, а $c$ выбирается так, чтобы сумма вероятностей равнялась $1$. В алгоритме упаковки применяется отбор по рангу с экспоненциальной формулой.
@@ -640,7 +643,7 @@
     \end{figure}
 
     \subsection{Отбор выживших}
-    В алгоритме используется композитная стратегия отбора выживших, состоящие из следующих стратегий отбора.
+    В алгоритме используется композитная стратегия отбора выживших, состоящая из следующих стратегий отбора.
 
     \textbf{Age based}. Если особь прожила больше $a$ поколений, то эта особь не попадает в новое поколение.
 
@@ -658,7 +661,7 @@
         \caption{Площадь выступов}
     \end{figure}
 
-    Эти два ограничения мотивируют решение строиться таким образом, чтобы все фигуры попадали в атлас и не пересекались с остальными фигурами. Также в функции оценки учитывается площадь изображений, не попавших в атлас, что мотивируют решение вобрать себя как можно больше изображений. Функция оценки это сумма перечисленных выше слагаемых с коэффициентами:
+    Эти два ограничения мотивируют решение строиться таким образом, чтобы все фигуры попадали в атлас и не пересекались с остальными фигурами. Также в функции оценки учитывается площадь изображений, не попавших в атлас, что мотивируют решение вобрать себя как можно больше изображений. Функция оценки -- это сумма перечисленных выше слагаемых с коэффициентами:
     \[
         F\left(individual\right) = a \cdot S_{intersection} + b \cdot S_{outside\;ledges} + c \cdot S_{missing}
     \]
@@ -668,23 +671,109 @@
 
     \subsection{Memetic algorithm}
 
-    Данный алгоритм упаковки является расширением классического генетического алгоритма, представленного в \talgref{meta-genetics}, и является реализацией memetic algorithm, который использует процедуру локального поиска, именуемой в литературе фазой обучения (learning phase). Некоторые выбранные особи перед отбором родителей проходят проходят процедуру локального поиска, которой известна специфика решаемой проблемы и которая пытается улучшить существующее решение. В данной работе используются 2 процедуры локального поиска: \textbf{hole filling} и \textbf{physics}.
+    Данный алгоритм упаковки является расширением классического генетического алгоритма, представленного в \talgref{meta-genetics}, и является реализацией memetic algorithm, который использует процедуру локального поиска, именуемой в литературе фазой обучения (learning phase). Некоторые выбранные особи перед отбором родителей проходят процедуру локального поиска, которой известна специфика решаемой проблемы и которая пытается улучшить существующее решение. В данной работе используются 2 процедуры локального поиска: \textbf{hole filling} и \textbf{physics}.
 
     \textbf{Hole filling}. Процедура пытается заполнить полигональные дыры объектами, которые потенциально могут поместиться в данную дыру.
 
     \textbf{Physics}. Используется симуляция физики при помощи известного физического движка Box2D \cite{Box2D}. Симуляция физики позволяет быстро преодолеть момент, когда между объектами остаются маленькие пересечения, от которых долго избавляется эволюция.
 
     \subsection{Условие выхода}
-    Условия выхода имеет 2 этапа. Первый этап -- это достижение приемлемого решения. Решение считается приемлемым, если $S_{outside_ledges} = S_{intersection} = 0$. Далее дается константное количество поколений для улучшения решения.
+    Условие выхода имеет 2 этапа. Первый этап -- это достижение приемлемого решения. Решение считается приемлемым, если $S_{outside_ledges} = S_{intersection} = 0$. Далее дается константное количество поколений для улучшения решения.
 
     Условие выхода может сработать, когда ещё не все изображения упаковались (возможно, их и нельзя упаковать в тот же атлас). Для неупакованных изображений алгоритм запускается заново.
 
     \subsection{Выбор размера атласа}
 
-    Размер атласа выбирается путем упаковки изображений быстрым жадным алгоритмов. Например, алгоритмом гильотины \cite{ThousandWayToPackBin}.
+    Размер атласа выбирается путем упаковки изображений быстрым жадным алгоритмом. Например, алгоритмом гильотины \cite{ThousandWayToPackBin}.
+    \pagebreak
+    \section{Применение алгоритмов}
 
-    \section{Вычислительный эксперимент}
 
+    Алгоритмы нашли применение в продуктах компании <<Game Forest>>.
+
+    \subsection{Game Forest}
+
+    \begin{figure}[H]
+        \centering
+        \includegraphics[scale=0.25]{images/GF.png}
+    \end{figure}
+
+    <<Game Forest>> -- студия разработки мобильных free to play игр. За 15 лет студия создала свыше 40 игр, общая аудитория которых —  около 100 миллионов человек по всему миру. В числе проектов, над которыми работала компания, есть такие хиты, заслужившие всеобщее признание и высокие оценки пользователей, как:
+
+    \begin{itemize}
+      \item Midnight Mysteries --- лучшая инновационная игра 2010 года по версии Big Fish Games;
+      \item 7 Wonders: Magical Mystery Tour — в ТОП 10 игр 2011 года по версии Microsoft;
+      \item Midnight Mysteries: Ghostwriting --- номинации Best Story и Best Concept 2015 года от сайта All About Casual Game;
+      \item Gummy Drop --- один из мировых лидеров в жанре Match-3 в настоящее время.
+    \end{itemize}
+
+    \subsection{Citrus}
+
+    \begin{figure}[H]
+        \centering
+        \includegraphics[scale=0.4]{images/Citrus.png}
+    \end{figure}
+
+    Свои игры компания разрабатывает на игровом движке с открытым исходным кодом Citrus.  Citrus состоит из следующих компонент:
+
+    \begin{itemize}
+      \item Yuzu --- библиотека, предоставляющая средства сериализации;
+      \item Kumquat --- генератор кода;
+      \item Lemon --- модуль компоновки сторонних библиотек;
+      \item Lime --- ядро движка;
+      \item Orange --- сборщик проектов, созданных при помощи движка;
+      \item Tangerine --- редактор сцен.
+    \end{itemize}
+
+    \begin{figure}[H]
+        \centering
+        \includegraphics[scale=0.2]{images/CitrusArchitecture.png}
+        \caption{Архитектура Citrus}
+    \end{figure}
+
+    Разработанные алгоритмы были интегрированы в модуль Orange.
+
+    \subsection{Генерация анимационного меша}
+
+    На основе алгоритма упрощения 2D меша был разработан инструмент генерации текстурного меша для упрощения работы аниматоров.
+
+    \begin{figure}[H]
+        \centering
+        \begin{subfigure}{.32\linewidth}
+            \centering
+            \includegraphics[scale=0.25]{images/Check100.png}
+        \end{subfigure}
+        \begin{subfigure}{.32\linewidth}
+            \centering
+            \includegraphics[scale=0.25]{images/Check1.png}
+        \end{subfigure}
+        \begin{subfigure}{.32\linewidth}
+            \centering
+            \includegraphics[scale=0.25]{images/CheckDone.png}
+        \end{subfigure}
+    \end{figure}
+
+    \subsection{Уменьшение размера бандла на игровом проекте}
+
+    Для проведения эксперимента был выбран проект, который находится в активной разработке. Для ряда атласов был применен алгоритм полигональной упаковки, что сказалось либо на уменьшении количества атласов, либо на уменьшении размера атласа. Точечное применение алгоритма полигональной упаковки позволило уменьшить размер бандла на 15\%.
+    \begin{figure}[H]
+        \centering
+        \includegraphics[scale=0.15]{images/polygonal.png}
+        \caption{Полигональный алгоритм}
+    \end{figure}
+
+    \begin{figure}[H]
+        \centering
+        \begin{subfigure}{0.49\linewidth}
+            \centering
+            \includegraphics[scale=0.15]{images/rect_0.png}
+        \end{subfigure}
+        \begin{subfigure}{0.49\linewidth}
+            \centering
+            \includegraphics[scale=0.15]{images/rect_1.png}
+        \end{subfigure}
+        \caption{Жадный алгоритм}
+    \end{figure}
 
     \newpage
     \printbibliography
