--- a/thesis.tex
+++ b/thesis.tex
@@ -23,18 +23,24 @@
 \newcommand*\talgref[1]{Алгоритм \ref{#1}}
 
 \author{Терехов Дмитрий Евгеньевич}
-\title{Полигонизация текстур и упаковка полигональных текстур в атлас}
+\title{Аппроксимация и упаковка текстурных 2D мешей}
 \setfaculty{09.04.01 Информатика и вычислительная техника}
 \setprogram{Искусственный интеллект и большие данные}
-\setgroup{М9119-09.04.01иибд}
-\setsupervisor{Сапрыкина Елена Валерьевна}{}
+\setsupervisor{Петров Павел Сергеевич}{зав. лаб., к.ф.-м.н.}
 \setdirector{Мирин Илья Геннадьевич}{}
-\setsecretary{Сапрыкина Елена Валерьевна}{}
-\setpracticetitle{Преддипломная практика}
+\setdeputy{Сапрыкина Елена Валерьевна}{к.э.н.}
+\setreviewer{Луньков Андрей Аллександрович}{зав. лаб. гидрофизики НЦВИ ИОФ РАН, к.ф.-м.н.}
+\setexportsupervisor{Сапрыкина Елена Валерьевна}{зам. директора ШЦЭ}
+\setsecretary{Тихонова Татьяна Сергеевна}{}
+\setconsultant{Кленин Александр Сергеевич}
+\setschool{цифровой экономики}
+
+\disablehyphenation
+
 \addbibresource{references.bib}
 
 \begin{document}
-    \maketitle{practice}
+    \maketitle{thesis}
     \begin{abstract}
         В данной работе представлены два эффективных алгоритма: генерация текстурного меша с последующим упрощением и упаковка полигональных текстур в атлас. Оба алгоритма работают с полигонами следующих типов: невыпуклые, полигоны с дырами, полигоны, состоящие из нескольких контуров.
 
