--- a/references.bib
+++ b/references.bib
@@ -457,3 +457,17 @@ clipping and offsetting lines and polygons},
     volume       = {82},
     year         = {1975}
 }
+
+@online{PolypackGithub,
+    title        = {Polypack library},
+    url          = {https://github.com/helviett/Polypack},
+    urldate      = {20.05.2021},
+    language     = {english},
+}
+
+@online{CitrusGithub,
+    title        = {Citrus Game Engine},
+    url          = {https://github.com/game-forest/Citrus},
+    urldate      = {20.05.2021},
+    language     = {english},
+}
