--- a/thesis.tex
+++ b/thesis.tex
@@ -26,7 +26,7 @@
 \title{Аппроксимация и упаковка текстурных 2D мешей}
 \setfaculty{09.04.01 Информатика и вычислительная техника}
 \setprogram{Искусственный интеллект и большие данные}
-\setsupervisor{Петров Павел Сергеевич}{зав. лаб., к.ф.-м.н.}
+\setsupervisor{Алексанина Марина Георгиевна}{ст. науч. сотр. лаб. ИАПУ ДВО РАН, к.т.н.}
 \setdirector{Мирин Илья Геннадьевич}{}
 \setdeputy{Сапрыкина Елена Валерьевна}{к.э.н.}
 \setreviewer{Луньков Андрей Аллександрович}{зав. лаб. гидрофизики НЦВИ ИОФ РАН, к.ф.-м.н.}
@@ -41,6 +41,25 @@
 
 \begin{document}
     \maketitle{thesis}
+    \makethesistitlebackside
+    \begin{review}[Тыщенко Андрея Геннадьевича]{оценка}{02.06}
+        asdasdasd
+    \end{review}
+    \begin{thesistask}[Терехову Дмитрию Евгеньевичу]{24.12.20}{124-01-03-18}{05.07.21}{23.12.20}
+        \taskitem \uline{Требуется разработать алгоритмы упрощения и упаковки текстурных 2D мешей\hfill\null}
+        \taskitem \uline{
+            -- Исследовать современные подходы для решения задач упаковки в контейнеры и раскроя на производстве\hfill\null\\-- Разработать алгоритм упрощения текстурного 2D меша;\hfill\null\\-- Разработать алгоритм для упаковки текстурных 2D мешей в текстурные атласы;\hfill\null\\-- Внедрить разработанные алгоритмы в игровой движко с открытым исходным кодом <<Citrus>>.\hfill\null
+        }
+        \taskitem \uline{
+            Научные статьи, книги, журналы в области вычислительной геометрии и методов оптимизации; git репозитории, реализующие алгоритмы вычислительной геометрии; документация CGAL -- крупнейшкой библиотеки алгоритмов вычислительной геометрии\hfill\null
+        }
+    \end{thesistask}
+    \begin{supervisorreview}[Терехов Дмитрия Евгеньевича]{отлично}{97,83}{02.07}
+		\par Выпускная квалификационная работа (ВКР) Терехова Д.Е. посвящена разработке алгоритмов вычислительной геометрии и оптимизации для решения прикладных задач в области компьютерной графики и разработки игр.
+		\par В качестве основной прикладной задачи выступает задача об упаковке полигональных текстур в текстурные атласы, что является частным случаем проблемы об упаковке в контейнеры -- NP-трудной комбинаторной задачи. Второй задачей является подготовка текстур к упаковке -- аппроксимация их контура для создания качественного меша, позволяющего оптимизировать не только упаковку в текстурные атласы, но и отрисовку в игре.
+        \par Терехов Д.Е. отлично справился с поставленными задачами и продемонстрировал высокий уровень квалификации и технической подготовки, умение обрабатывать и интерпретировать новую информацию, а также способность проектировать программный код высокого качества и интегрировать его в промышленную кодовую базу. Итогом работы является внедрение разработанных алгоритмов в продукт компании <<Game Forest>> -- игровой движок с открытым исходным кодом <<Citrus>>. Применение данных алгоритмов на практике упростило работу аниматорам и улучшило показатели игровой сборки.
+		\par Считаю, что ВКР Терехова Д.Е. выполнена в соответствии с требованиями, предъявляемыми к магистерским диссертациям, имеет высокую теоретическую и практическую ценность и заслуживает оценки <<отлично>>, а её автор -- присвоения степени магистра по направлению подготовки 09.04.01 <<Информатика и вычислительная техника>>.
+	\end{supervisorreview}
     \begin{abstract}
         В данной работе представлены два эффективных алгоритма: генерация текстурного меша с последующим упрощением и упаковка полигональных текстур в атлас. Оба алгоритма работают с полигонами следующих типов: невыпуклые, полигоны с дырами, полигоны, состоящие из нескольких контуров.
 
@@ -54,7 +73,7 @@
 
     Упаковка в текстурные атласы это один из этапов подготовки ассетов-текстур для оптимального использования: маленькие текстуры становятся частью большого изображения -- текстурного атласа. Это позволяет минимизировать затраты по памяти, а также уменьшить количество вызовов на отрисовку. Текстурный меш позволяет уменьшить количество вызовов фрагментного шейдера (по сравнению с отрисовкой прямоугольника), путем минимизации площади пустых пикселей, входящих в меш. Представление текстур в виде полигонов позволяет упаковать больше текстур в атлас, так как в полигональном виде они занимают меньшую площадь.
 
-    Не существует открытых программных пакетов или алгоритмов, которые решают поставленные задачи. Все программные пакеты являются проприетарными, а известные статьи решают данные задачи в очень упрощенном виде. Это и послужило мотивацией для проведения исследований и создания новых алгоритмов.
+    Не существует открытых программных пакетов или алгоритмов, которые решают поставленные задачи. Все программные пакеты являются проприетарными, а известные статьи решают данные задачи в очень упрощенном виде. Это и послужило мотивацией для проведения исследований и создания новых алгоритмов аппроксимации и упаковки текстурных 2D мешей.
 
     В разделе <<Задачи упрощения полигонов и упаковки в контейнеры>> описывается важность поставленных задач для компьютерной графики и разработки игр, дается обзор теоретических положений и практических подходов к их решению.
 
@@ -62,7 +81,6 @@
 
     В разделе <<Применение алгоритмов>> описывается применение результатов исследования в реальном игровом проекте компании <<Game Forest>>, разработанном на игровом движке с открытым исходным кодом <<Citrus>>.
 
-    \section*{Глоссарий}
     \pagebreak
     \section{Задачи упрощения полигонов и упаковки в контейнеры}
 
@@ -133,7 +151,7 @@
 
     \begin{figure}[H]
         \centering
-        \includegraphics[scale=1.2]{images/donutpixel_contour_none.png}
+        \includegraphics[scale=3]{images/donutpixel_contour_none.png}
         \caption{Контур изображения}
     \end{figure}
 
@@ -248,17 +266,17 @@
         \centering
         \begin{subfigure}[t]{.33\linewidth}
             \centering
-            \includegraphics[scale=0.2]{images/SuzukiExample2.png}
+            \includegraphics[scale=0.3]{images/SuzukiExample2.png}
             \caption{Изображение}
         \end{subfigure}
         \begin{subfigure}[t]{.33\linewidth}
             \centering
-            \includegraphics[scale=0.2]{images/SuzukiExample2_uvs.png}
+            \includegraphics[scale=0.3]{images/SuzukiExample2_uvs.png}
             \caption{Контуры изображения + UV координаты}
         \end{subfigure}
         \begin{subfigure}[t]{.32\linewidth}
             \centering
-            \includegraphics[scale=0.2]{images/SuzukiExample2_wanted_uvs.png}
+            \includegraphics[scale=0.3]{images/SuzukiExample2_wanted_uvs.png}
             \caption{Контур изображения и желаемые UV координаты}
         \end{subfigure}
         \caption{Проблема неправильных UV координат}
@@ -762,9 +780,10 @@
     \subsection{Уменьшение размера бандла на игровом проекте}
 
     Для проведения эксперимента был выбран проект, который находится в активной разработке. Для ряда атласов был применен алгоритм полигональной упаковки, что сказалось либо на уменьшении количества атласов, либо на уменьшении размера атласа. Точечное применение алгоритма полигональной упаковки позволило уменьшить размер бандла на 15\%.
+
     \begin{figure}[H]
         \centering
-        \includegraphics[scale=0.15]{images/polygonal.png}
+        \includegraphics[scale=0.1]{images/polygonal.png}
         \caption{Полигональный алгоритм}
     \end{figure}
 
@@ -772,14 +791,25 @@
         \centering
         \begin{subfigure}{0.49\linewidth}
             \centering
-            \includegraphics[scale=0.15]{images/rect_0.png}
+            \includegraphics[scale=0.1]{images/rect_0.png}
         \end{subfigure}
         \begin{subfigure}{0.49\linewidth}
             \centering
-            \includegraphics[scale=0.15]{images/rect_1.png}
+            \includegraphics[scale=0.1]{images/rect_1.png}
         \end{subfigure}
         \caption{Жадный алгоритм}
     \end{figure}
+
+    \subsection{Результаты}
+
+    Код написан на языке C\# и содержится в двух репозиториях: исследовательский репозиторий \cite{PolypackGithub} и репозиторий игрового движка с открытым исходным кодом Citrus \cite{CitrusGithub}. В исследовательском репозитории было сделано 156 коммитов, 30741 добавление и 20885 удалений. В репозитории Citrus было сделано 74 коммита, 6400 добавлений и 1158 удалений.
+
+    Алгоритмы хорошо показали себя на практике, поэтому планируется дальнейшее их применение других игровых проектах компании.
+
+    \pagebreak
+    \section*{Заключение}
+
+    Таким образом, в рамках проделанной работы были реализованы алгоритмы аппроксимации и упаковки текстурных 2D мешей. Алгоритмы были успешно протестированы и внедрены в игровой движок с открытым исходным кодом <<Citrus>>, разрабатываемый игровой студией <<Game Forest>>.
 
     \newpage
     \printbibliography
