--- a/presentation.tex
+++ b/presentation.tex
@@ -11,6 +11,11 @@
 \usepackage{algorithm}
 \usepackage{algpseudocode}
 \usepackage{multirow}
+\usepackage{xcolor}
+
+\definecolor{ForestGreen}{RGB}{34, 140, 34}
+\definecolor{Intersection}{RGB}{171, 112, 255}
+\definecolor{Ledges}{RGB}{119, 186, 95}
 
 \graphicspath{{images/}}
 \newenvironment{algo}[1][]
@@ -21,12 +26,11 @@
   {\end{algorithm}}
 \DeclareMathOperator{\sech}{sech}
 \setsansfont{Fira Sans}
-\title{Полигонизация текстур и упаковка полигональных текстур в атлас}
+\title{Аппроксимация и упаковка текстурных 2D мешей}
 \author[Терехов Д.Е.]{Студент группы М9119-09.04.01ИИБД Терехов Дмитрий Евгеньевич\\
 Руководитель:\\
-Старший преподаватель кафедры информатики, математического и компьютерного моделирования\\
-Александр Сергеевич Кленин}
-\date{26 июня 2021}
+старший научный сотрудник лаборатории ИАПУ ДВО РАН, кандидат технических наук Алексанина Марина Георгиевна}
+\date{10 июля 2021}
 \usetheme[progressbar=frametitle, numbering=fraction]{metropolis}
 \makeatletter
         \setlength{\metropolis@progressinheadfoot@linewidth}{2pt}
@@ -65,15 +69,6 @@
         \begin{itemize}
             \item Разработать алгоритм генерации текстурного меша
             \item Разработать алгоритм упаковки полигональных текстур в атлас
-        \end{itemize}
-    \end{frame}
-    \begin{frame}
-        \frametitle{Этапы полигональной упаковки в атлас}
-        \begin{itemize}
-            \item Трассировка контура
-            \item Аппроксимация контура
-            \item Генерация меша
-            \item Упаковка в атлас
         \end{itemize}
     \end{frame}
     \begin{frame}
@@ -138,20 +133,6 @@
         \end{figure}
     \end{frame}
     \begin{frame}
-        \frametitle{Трассировка контура. Первичная аппроксимация}
-        \begin{figure}[H]
-            \centering
-            \begin{subfigure}[l]{0.50\linewidth}
-                \centering
-                \includegraphics[scale=2]{donutpixel_contour_none.png}
-            \end{subfigure}
-            \begin{subfigure}{0.49\linewidth}
-                \centering
-                \includegraphics[scale=2]{donutpixel_contour_simple.png}
-            \end{subfigure}
-        \end{figure}
-    \end{frame}
-    \begin{frame}
         \frametitle{Аппроксимация контура}
         \begin{itemize}
             \item Применение минимальных по стоимости преобразований
@@ -173,7 +154,7 @@
         \end{figure}
     \end{frame}
     \begin{frame}
-        \frametitle{Аппроксимация контура. Преобразования}
+        \frametitle{Аппроксимация контура. Удаление угла}
         \begin{figure}[H]
             \centering
             \begin{subfigure}[t]{\linewidth}
@@ -187,14 +168,7 @@
         \end{figure}
     \end{frame}
     \begin{frame}
-        \frametitle{Аппроксимация контура. Преобразования}
-        \begin{figure}[H]
-            \centering
-            \includegraphics[scale=0.8]{images/remove_triangular_hole.png}
-        \end{figure}
-    \end{frame}
-    \begin{frame}
-        \frametitle{Аппроксимация контура. Преобразования}
+        \frametitle{Аппроксимация контура. Восстановление угла}
         \begin{figure}[H]
             \begin{subfigure}[t]{\linewidth}
                 \centering
@@ -207,7 +181,23 @@
         \end{figure}
     \end{frame}
     \begin{frame}
-        \frametitle{Аппроксимация контура. Слияние}
+        \frametitle{Аппроксимация контура. Удаление треугольной дыры}
+        \begin{figure}[H]
+            \centering
+            \includegraphics[scale=0.8]{images/remove_triangular_hole.png}
+        \end{figure}
+    \end{frame}
+    \begin{frame}
+        \frametitle{Аппроксимация контура}
+        Стоимость преобразования -- добавочная площадь
+        \begin{itemize}
+            \item Дерево полигонов с корнем в рамке изображения
+            \item Триангуляция Делоне с ограничениями для проверки преобразований
+            \item BST для поиска вершины с минимальной стоимостью преобразования
+        \end{itemize}
+    \end{frame}
+    \begin{frame}
+        \frametitle{Аппроксимация контура. Слияние полигонов}
         \begin{figure}[H]
             \centering
             \begin{subfigure}[t]{\linewidth}
@@ -221,16 +211,7 @@
         \end{figure}
     \end{frame}
     \begin{frame}
-        \frametitle{Аппроксимация контура}
-        Стоимость преобразования -- добавочная площадь
-        \begin{itemize}
-            \item Дерево полигонов с корнем в рамке изображения
-            \item Триангуляция Делоне с ограничениями для проверки преобразований
-            \item BST для поиска вершины с минимальной стоимостью преобразования
-        \end{itemize}
-    \end{frame}
-    \begin{frame}
-        \frametitle{Аппроксимация контура. Алгоритм слияния}
+        \frametitle{Аппроксимация контура. Полигон видимости}
         \begin{figure}[H]
             \centering
             \includegraphics[scale=0.3]{visibility_polygon.png}
@@ -238,8 +219,8 @@
     \end{frame}
     \begin{frame}
         \frametitle{Аппроксимация контура. Алгоритм слияния}
-        Triangular Expansion $O\left(nh\right)$ нахождение полигона видимости
-        $O\left(\log_2\left|V\right|\right)$ на запрос нахождения точки в полигоне видимости
+        Нахождение полигона видимости (Triangular Expansion) -- $O\left(nh\right)$
+        Запрос нахождения точки в полигоне видимости -- $O\left(\log_2\left|V\right|\right)$
         \begin{figure}[H]
             \centering
             \begin{subfigure}[t]{0.49\linewidth}
@@ -278,17 +259,14 @@
     \end{frame}
     \begin{frame}
         \frametitle{Генетический алгоритм. Репрезентация особей}
-        \begin{figure}[H]
-            \centering
-            \includegraphics[scale=0.8]{Image.png}
-        \end{figure}
-    \end{frame}
-    \begin{frame}
-        \frametitle{Генетический алгоритм. Репрезентация особей}
         \begin{itemize}
             \item Массив троек (X, Y, Angle) для каждого ImageObject
             \item Массив булевых флагов присутствия в атласе для каждого Image
         \end{itemize}
+        \begin{figure}[H]
+            \centering
+            \includegraphics[scale=0.35]{basketball.png}
+        \end{figure}
     \end{frame}
     \begin{frame}
         \frametitle{Генетический алгоритм. Операторы рекомбинации}
@@ -341,36 +319,38 @@
     \begin{frame}
         \frametitle{Генетический алгоритм. Функция оценки}
         \[
-            F\left(individual\right) = a \cdot S_{intersection} + b \cdot S_{outside\;ledges} + c \cdot missing \cdot S_{avg}
+            F\left(individual\right) = a \cdot \textcolor{Intersection}{S_{intersection}} + b \cdot \textcolor{Ledges}{S_{ledges}} + c \cdot S_{missing}
         \]
         \begin{figure}[H]
             \centering
-            \includegraphics[scale=0.25]{ledges.png}
+            \includegraphics[scale=0.05]{2.png}
         \end{figure}
     \end{frame}
     \begin{frame}
-        \frametitle{Генетический алгоритм. Функция оценки}
-        \[
-            S_{intersection} = \sum\limits_{0}^{n - 1}S\left(P_i\right) - S\left(\bigcup\limits_{0}^{n - 1}P_i\right)
-        \]
-        Clipper library by Angus Johnson (extended Vatti)
-    \end{frame}
-    \begin{frame}
         \frametitle{Memetic algorithm}
-        \begin{itemize}
-            \item Hole filler
-            \item Physics (Box2D)
-        \end{itemize}
+        Физика (Box2D)
     \end{frame}
     \begin{frame}
         \frametitle{Генетический алгоритм. Пример работы}
-        \begin{table}[ht]
-            \begin{center}
-            \begin{tabular}{cc}
-                \multirow{2}{*}[2cm]{\includegraphics[scale=0.08]{polygonal.png}}&\includegraphics[scale=0.08]{rect_0.png}\\
-                &\includegraphics[scale=0.08]{rect_1.png}
-            \end{tabular}
-            \end{center}
-        \end{table}
+        \begin{figure}[H]
+            \centering
+            \includegraphics[width=\linewidth, keepaspectratio]{1.png}
+        \end{figure}
+    \end{frame}
+    \begin{frame}
+        \frametitle{Заключение}
+        Исследовательский репозиторий -- 156 коммитов, \textcolor{ForestGreen}{30741++}, \textcolor{red}{20885--}\\
+        Репозиторий Citrus -- 74 коммита, \textcolor{ForestGreen}{6400++}, \textcolor{red}{1158--}
+        \begin{figure}[H]
+            \centering
+            \begin{subfigure}{0.49\linewidth}
+                \centering
+                \includegraphics[scale=0.2]{GF.png}
+            \end{subfigure}
+            \begin{subfigure}{0.49\linewidth}
+                \centering
+                \includegraphics[scale=0.2]{Citrus.png}
+            \end{subfigure}
+        \end{figure}
     \end{frame}
 \end{document}
