VERY LAST COMMIT

--- a/presentation.tex
+++ b/presentation.tex
@@ -75,10 +75,11 @@
         \frametitle{Меш и полигоны}
         \begin{figure}[H]
             \centering
-            \begin{subfigure}[t]{.49\linewidth}
+            \begin{subfigure}{.49\linewidth}
+                \centering
                 \includegraphics[scale=1.5]{donutpixel_mesh.png}
             \end{subfigure}
-            \begin{subfigure}[t]{.49\linewidth}
+            \begin{subfigure}{.49\linewidth}
                 \centering
                 \includegraphics[scale=1.5]{donutpixel_approx_mid.png}
             \end{subfigure}
@@ -124,11 +125,11 @@
             \centering
             \begin{subfigure}[l]{0.50\linewidth}
                 \centering
-                \includegraphics[scale=0.25]{SuzukiExample2_uvs.png}
+                \includegraphics[scale=0.35]{SuzukiExample2_uvs.png}
             \end{subfigure}
             \begin{subfigure}{0.49\linewidth}
                 \centering
-                \includegraphics[scale=0.25]{SuzukiExample2_wanted_uvs.png}
+                \includegraphics[scale=0.35]{SuzukiExample2_wanted_uvs.png}
             \end{subfigure}
         \end{figure}
     \end{frame}
@@ -160,6 +161,7 @@
             \begin{subfigure}[t]{\linewidth}
                 \centering
                 \includegraphics[scale=0.8]{images/earcut.png}
+                \vspace*{1cm}
             \end{subfigure}
             \begin{subfigure}[b]{\linewidth}
                 \centering
@@ -173,6 +175,7 @@
             \begin{subfigure}[t]{\linewidth}
                 \centering
                 \includegraphics[scale=0.8]{images/bendneighbor2.png}
+                \vspace*{1cm}
             \end{subfigure}
             \begin{subfigure}[t]{\linewidth}
                 \centering
@@ -203,6 +206,7 @@
             \begin{subfigure}[t]{\linewidth}
                 \centering
                 \includegraphics[scale=0.8]{images/polygonmerge.png}
+                \vspace*{1cm}
             \end{subfigure}
             \begin{subfigure}[t]{\linewidth}
                 \centering
@@ -329,6 +333,10 @@
     \begin{frame}
         \frametitle{Memetic algorithm}
         Физика (Box2D)
+        \begin{figure}[H]
+            \centering
+            \includegraphics[scale=0.15]{box2d.png}
+        \end{figure}
     \end{frame}
     \begin{frame}
         \frametitle{Генетический алгоритм. Пример работы}
